added explore bg photos

--- a/css/style.css
+++ b/css/style.css
@@ -1109,7 +1109,7 @@ nav.navbar.navbar-default {
 /*-- //testimonials --*/
 /*-- footer --*/
 .footer{
-	background: url(../images/13.jpg) no-repeat 0px 0px;
+	background: url(../images/carousel.jpg) no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1461,7 +1461,7 @@ p.b_label {
 	margin-top:2em;
 }
 .wthree_services_grid1{
-	background:url(../images/9.jpg) no-repeat 0px 0px;
+	background:url(../images/at.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -1469,7 +1469,7 @@ p.b_label {
 	-ms-background-size:cover;
 }
 .wthree_services_grid2{
-	background:url(../images/10.jpg) no-repeat 0px 0px;
+	background:url(../images/pt.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -1477,7 +1477,7 @@ p.b_label {
 	-ms-background-size:cover;
 }
 .wthree_services_grid3{
-	background:url(../images/11.jpg) no-repeat 0px 0px;
+	background:url(../images/cs.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -1485,7 +1485,7 @@ p.b_label {
 	-ms-background-size:cover;
 }
 .wthree_services_grid4{
-	background:url(../images/8.jpg) no-repeat 0px 0px;
+	background:url(../images/ct.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -1493,7 +1493,7 @@ p.b_label {
 	-ms-background-size:cover;
 }
 .wthree_services_grid5{
-	background:url(../images/14.jpg) no-repeat 0px 0px;
+	background:url(../images/placements.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -1501,7 +1501,7 @@ p.b_label {
 	-ms-background-size:cover;
 }
 .wthree_services_grid6{
-	background:url(../images/15.jpg) no-repeat 0px 0px;
+	background:url(../images/internship.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
